import prr.core.Terminal;

public class FancyTerminal extends Terminal{
    
}
