package prr.core.terminal;

public class BasicTerminal extends Terminal{
    
    public void makeVideoCall(){        
    }
    
    boolean accepVideoCall(){
        return false;
    }
}
